<resources>
    <string name="default_error">Unknown error</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="ok">No</string>
    <string name="lets_start_connecting">Let\'s start by connecting to\n compatible devices</string>
    <string name="searching_for_nearby_devices">Searching for nearby devices...</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="device">Device:</string>
    <string name="device_name">Device name:</string>
    <string name="done">Done</string>
    <string name="search">Search</string>
    <string name="active">Active:00:00:00 Filter: 00:00:00</string>
    <string name="filter">Filter</string>
    <string name="home">Home</string>
    <string name="devices">Devices</string>
    <string name="info">Info</string>
    <string name="all_device">All devices</string>
    <string name="interval">Interval</string>
    <string name="non_stop">Non-stop</string>
    <string name="schedule">Schedule</string>
    <string name="manage_devices">Manage devices</string>
    <string name="reset_app">Reset app</string>
    <string name="add_device">Add device</string>
    <string name="you_want_to_reset">Are you shure you want to reset\n aerMist app?</string>
    <string name="you_will_lose_all_your_setting">You will loose all your settings\n and saved devices</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="reset">Reset</string>
    <string name="standby">Standby</string>
    <string name="start">Start</string>
    <string name="mist">Mist:</string>
    <string name="suspend">Suspend:</string>
    <string name="edit">Edit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="active_days">Active days</string>
    <string name="mo">Mo</string>
    <string name="su">Su</string>
    <string name="th">Th</string>
    <string name="tu">Tu</string>
    <string name="we">We</string>
    <string name="fr">Fr</string>
    <string name="sa">Sa</string>
    <string name="timer">Timer</string>
    <string name="start_time">Start time</string>
    <string name="stop_time">Stop time</string>
    <string name="add_time">Add time</string>
    <string name="spray_mode">Spray mode</string>
    <string name="hours">Hours</string>
    <string name="save">Save</string>
    <string name="minutes">Minutes</string>
    <string name="spray_time">Spray time</string>
    <string name="stop">Stop</string>
    <string name="misting">Misting</string>
    <string name="start_anyway">Start anyway</string>
    <string name="device_are_offline">these devices are offline</string>
    <string name="start_global_mode">these devices are already running in their individual modes. Starting this global mode will stop their current mode.</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="active_">Active:</string>
    <string name="filter_">Filter:</string>
    <string name="rename">Rename</string>
    <string name="reset_filter">Reset filter</string>
    <string name="remove_device">Remove device</string>
    <string name="remove">Remove</string>
    <string name="starting">Starting...</string>
    <string name="mode">Mode:</string>
    <string name="device_id">Device ID:</string>
    <string name="description2">For questions or concerns about our Privacy Policy, please visit: <a href="https://aermist.com/pages/app-privacy-policy/">https://aermist.com/pages/app-privacy-policy</a></string>
    <string name="description3">For any issues with the App itself, please contact us at: <a href="developer@aermist.com/">developer@aermist.com</a></string>
    <string name="description">In App Info:Thank you for choosing aerMist high pressure misting systems for you outdoor cooling needs. For more info on our products and how to use this App to control andautomate our systems please visit:
         <a href="www.aerMist.com">www.aerMist.com </a> or reference a user manual.</string>
    <string name="are_you_shure_you_want_to_remove">Are you shure you want to remove</string>
    <string name="reset_filter_title">Are you shoure,that you want to reset</string>
    <string name="connecting">Connecting</string>
    <string name="your_device_is_disconnected">Your device is disconnected.\n Please ensure that it has power and that you are within range</string>
    <string name="all_devices_are_disconnected">All your devices are disconnected.\n Please ensure that at least one has power and that you are within range
</string>
    <string name="all">All</string>
    <string name="you_must_choose">You must choose days and interval</string>
    <string name="turn_bluetooth_on">Your bluetooth is OFF,please turn ON and try again</string>


</resources>