<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.schedulere.SetScheduleFragment">

    <TextView
        android:id="@+id/scheduleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/schedule"
        android:textColor="@color/dark_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activeDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/active_days"
        android:textColor="@color/dark_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/scheduleTv"
        app:layout_constraintTop_toBottomOf="@id/scheduleTv" />

    <TextView
        android:id="@+id/monday"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/orange_circle"
        android:gravity="center"
        android:text="@string/mo"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/scheduleTv"
        app:layout_constraintTop_toBottomOf="@id/activeDays" />

    <TextView
        android:id="@+id/sunday"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/orange_circle"
        android:gravity="center"
        android:text="@string/su"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@id/activeDays" />

    <TextView
        android:id="@+id/thursday"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/gray_circle"
        android:gravity="center"
        android:text="@string/th"
        android:textAllCaps="true"
        android:textColor="@color/dark_gray"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/guidelineCenter"
        app:layout_constraintStart_toStartOf="@id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@id/activeDays" />

    <TextView
        android:id="@+id/tuesday"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/gray_circle"
        android:gravity="center"
        android:text="@string/tu"
        android:textAllCaps="true"
        android:textColor="@color/dark_gray"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/guidelineQuarter"
        app:layout_constraintTop_toBottomOf="@id/activeDays" />

    <TextView
        android:id="@+id/wednesday"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/gray_circle"
        android:gravity="center"
        android:text="@string/we"
        android:textAllCaps="true"
        android:textColor="@color/dark_gray"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/thursday"
        app:layout_constraintStart_toEndOf="@id/tuesday"
        app:layout_constraintTop_toBottomOf="@id/activeDays" />

    <TextView
        android:id="@+id/friday"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/gray_circle"
        android:gravity="center"
        android:text="@string/fr"
        android:textAllCaps="true"
        android:textColor="@color/dark_gray"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/guidelineThirdQuarter"
        app:layout_constraintStart_toEndOf="@id/thursday"
        app:layout_constraintTop_toBottomOf="@id/activeDays" />

    <TextView
        android:id="@+id/saturday"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/gray_circle"
        android:gravity="center"
        android:text="@string/sa"
        android:textAllCaps="true"
        android:textColor="@color/dark_gray"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/sunday"
        app:layout_constraintStart_toEndOf="@id/friday"
        app:layout_constraintTop_toBottomOf="@id/activeDays" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineQuarter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.275" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineThirdQuarter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.725" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/timerTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/timer"
        android:textColor="@color/dark_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/monday" />

    <TextView
        android:id="@+id/startTimeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/start_time"
        android:textColor="@color/dark_gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/timerTv" />

    <TextView
        android:id="@+id/stopTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/stop_time"
        android:textColor="@color/dark_gray"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/thursday"
        app:layout_constraintTop_toBottomOf="@id/timerTv" />

    <TextView
        android:id="@+id/startTimeValue"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/white_container_border_radius_8"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="07:30"
        android:textColor="@color/dark_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/startTimeTv" />

    <View
        android:id="@+id/middleLine"
        android:layout_width="6dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toEndOf="@id/startTimeValue"
        app:layout_constraintEnd_toStartOf="@id/stopTimeValue"
        app:layout_constraintTop_toTopOf="@id/startTimeValue"
        android:background="@color/dark_text"
        app:layout_constraintBottom_toBottomOf="@id/startTimeValue"/>

    <TextView
        android:id="@+id/stopTimeValue"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/white_container_border_radius_8"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="16:30"
        android:textColor="@color/dark_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/thursday"
        app:layout_constraintTop_toBottomOf="@id/startTimeTv" />

    <TextView
        android:id="@+id/addTimeBtn"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/gray_radius_8"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/add_time"
        android:textColor="@color/dark_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/stopTimeValue"
        app:layout_constraintStart_toStartOf="@id/startTimeValue"
        app:layout_constraintTop_toBottomOf="@id/stopTimeValue" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="24dp"
        android:background="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@id/addTimeBtn" />

    <TextView
        android:id="@+id/sprayMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/spray_mode"
        android:textColor="@color/dark_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/line" />

    <RadioButton
        android:id="@+id/radioBtnNS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/non_stop"
        android:textColor="@color/dark_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/sprayMode" />

    <RadioButton
        android:id="@+id/radioBtnInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/interval"
        android:textColor="@color/dark_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/radioBtnNS" />

    <TextView
        android:id="@+id/mistTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/mist"
        android:textColor="@color/dark_gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/radioBtnInterval" />

    <TextView
        android:id="@+id/suspend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/suspend"
        android:textColor="@color/dark_gray"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/thursday"
        app:layout_constraintTop_toTopOf="@id/mistTv"/>
    <View
        android:id="@+id/wraper"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="@id/mistTimeValue"
        app:layout_constraintEnd_toEndOf="@id/suspendValue"
        app:layout_constraintTop_toTopOf="@id/mistTimeValue"
        android:background="@drawable/white_container_border_radius_8"/>
    <TextView
        android:id="@+id/mistTimeValue"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="07:30"
        android:textColor="@color/dark_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/mistTv" />

    <View
        android:id="@+id/middleLineTwo"
        android:layout_width="6dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toEndOf="@id/mistTimeValue"
        app:layout_constraintEnd_toStartOf="@id/suspendValue"
        app:layout_constraintTop_toTopOf="@id/mistTimeValue"
        android:background="@color/dark_text"
        app:layout_constraintBottom_toBottomOf="@id/mistTimeValue"/>

    <TextView
        android:id="@+id/suspendValue"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="16:30"
        android:textColor="@color/dark_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/thursday"
        app:layout_constraintTop_toBottomOf="@id/mistTv" />

</androidx.constraintlayout.widget.ConstraintLayout>