<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.info.InfoFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:src="@drawable/aermist_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="57dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="57dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/description"
        android:textColor="@color/dark_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />
    <TextView
        android:id="@+id/info2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="57dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="57dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/description2"
        android:textColor="@color/dark_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info" />
    <TextView
        android:id="@+id/info3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="57dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="57dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/description3"
        android:textColor="@color/dark_text"
        android:textSize="14sp"
        android:autoLink="web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info2" />
    <Button
        android:id="@+id/btnResetApp"
        android:layout_width="140dp"
        android:layout_height="42dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/gray"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/reset_app"
        android:textAllCaps="false"
        android:textColor="@color/dark_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info3" />
</androidx.constraintlayout.widget.ConstraintLayout>