<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/white_container_12"
    android:paddingBottom="20dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp">

    <TextView
        android:id="@+id/deviceTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32sp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/device"
        android:textColor="@color/dark_text"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/deviceId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="FG-XXXX"
        android:textAllCaps="true"
        android:textColor="@color/dark_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/deviceTv"
        app:layout_constraintTop_toBottomOf="@id/deviceTv" />

    <TextView
        android:id="@+id/deviceNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32sp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/device_name"
        android:textColor="@color/dark_text"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/deviceId"
        app:layout_constraintTop_toBottomOf="@id/deviceId" />

    <EditText
        android:id="@+id/deviceNameValue"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_regular"
        android:textSize="16sp"
        android:textColor="@color/dark_text"
        android:paddingLeft="10dp"
        android:maxLines="1"
        android:inputType="text"
        android:background="@drawable/gray_rectangle_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deviceNameTv" />

    <TextView
        android:id="@+id/cancelBtn"
        android:layout_width="140dp"
        android:layout_height="42dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/gray_radius_8"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/dark_text"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/deviceNameValue"
        app:layout_constraintTop_toBottomOf="@id/deviceNameValue" />

    <TextView
        android:id="@+id/addBtn"
        android:layout_width="140dp"
        android:layout_height="42dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/orange_radius_8"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toEndOf="@id/cancelBtn"
        app:layout_constraintEnd_toEndOf="@id/deviceNameValue"
        app:layout_constraintTop_toBottomOf="@id/deviceNameValue" />
</androidx.constraintlayout.widget.ConstraintLayout>